restyled footnotes class to apply to li instead of div, titled with .footnotes:before. Can be used in .md with {:.footnotes} on an ol

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,6 @@
 
   <link rel="stylesheet" href="/assets/styles.css">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="/feed.xml">
+  <script type="text/javascript" src="/assets/scripts.js"></script>
+  <script src="https://use.fontawesome.com/30d68a80c1.js"></script>
 </head>
