--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,6 +7,7 @@
   <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
   <link rel="stylesheet" href="/assets/styles.css">
+  <link rel="stylesheet" type="text/css" href="/assets/highlights.css">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="/feed.xml">
   <script type="text/javascript" src="/assets/scripts.js"></script>
   <script src="https://use.fontawesome.com/30d68a80c1.js"></script>
