--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,5 +13,5 @@ layout: hero1
 
 <div class="twitter-share">
 	<i class="fa fa-twitter"></i>
-	<p>If you liked this article and think others should read it, please <a href="http://twitter.com/share?url={{ page.url | absolute_url }}">share it on Twitter.</a></p>
+	<p>If you read this article and liked it, please <a href="http://twitter.com/share?url={{ page.url | absolute_url }}">share it on Twitter.</a></p>
 </div>
