icons linked, email, twitter, github, linkedin, rss urls all added to _config.yml

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,17 +13,23 @@
 
   <div class="nav-area">
     <div class="share-icons">
-      <span class="fa-stack" id="twitter">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-      </span>
-      <span class="fa-stack" id="github">
-        <i class="fa fa-github fa-stack-2x"></i>
-      </span>
-      <span class="fa-stack" id="rss">
-        <i class="fa fa-circle fa-stack-2x"></i>
-        <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
-      </span>
+      <a href="{{ site.twitter }}">
+        <span class="fa-stack" id="twitter">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
+      <a href="{{ site.github }}">
+        <span class="fa-stack" id="github">
+          <i class="fa fa-github fa-stack-2x"></i>
+        </span>
+      </a>
+      <a href="{{ site.rss }}">
+        <span class="fa-stack" id="rss">
+          <i class="fa fa-circle fa-stack-2x"></i>
+          <i class="fa fa-rss fa-stack-1x fa-inverse"></i>
+        </span>
+      </a>
     </div>
 
     <div class="navigation">
