--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,8 +1,5 @@
-@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600,700,800');
-@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:100,300,400,500');
-/*@import url('https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600,600i,700,700i');*/
-/*@import url('https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i');*/
-@import url('https://fonts.googleapis.com/css?family=Oswald:200,300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,600');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:400');
 @import url('https://fonts.googleapis.com/css?family=Carrois+Gothic');
 
 body {
@@ -12,12 +9,6 @@ body {
 	font-weight: 300;
 	background-color: #EFEFEF;
 }
-
-/*hr {
-	border: none;
-	border-bottom: 1px solid #B0D0D7;
-	margin: 0;
-}*/
 
 hr { 
   border: 0; 
@@ -47,8 +38,11 @@ a.current {
 	color: #FF3B3F;
 }
 
+.share-icons a {
+	text-decoration: none;
+}
+
 h1, h2, h3, h4 {
-	/*font-family: 'Oswald', sans-serif;*/
 	font-family: 'Carrois Gothic', sans-serif;
 	font-weight: 400;
 	margin: 0;
@@ -80,6 +74,8 @@ figure.article-figure img {
 }
 
 pre {
+	font-family: 'Roboto Mono', monospace;
+	font-weight: 400;
 	overflow-y: scroll;
 	word-wrap: normal;
 	background-color: #fcfcff;
